--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Welcome - Bienvenidos - 欢迎 - स्वागत - أهلا بك
-</h2>
+            <h2>Welcome - Bienvenidos - 欢迎 - स्वागत</h2>
             <p class="mb-0"></p>
           </div>
           
