--- a/about.html
+++ b/about.html
@@ -52,6 +52,10 @@
     <!-- ======= Works Section ======= -->
 
 
+    <section class="section pb-5">
+      <div class="container">
+        <div class="row mb-5 align-items-end">
+          <div class="col-md-6" data-aos="fade-up">
 
       
         <span></span>
