--- a/index.html
+++ b/index.html
@@ -125,8 +125,17 @@
         </div>
       </div>
     </section><!-- End  Works Section -->
-       <h2>About the Artist</h2>
+     <section class="section site-portfolio">
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+                  <h2>About the Artist</h2>
+            
   <p> lorem ipsum, ipsum lorem whatugha </p>
+            <p class="mb-0"></p>
+          </div>
+          
+
     <!-- ======= Services Section ======= -->
 
 
