--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Welcome - Bienvenidos - 欢迎</h2>
+            <h2>El Portfolio</h2>
             <p class="mb-0"></p>
           </div>
 
@@ -136,7 +136,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-                  <h2>About the Artist</h2>
+                  <h2>El Artistt</h2>
             
   <p> lorem ipsum, ipsum lorem whatugha </p>
             <p class="mb-0"></p>
