--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-                  <h2>El Artistt</h2>
+                  <h2>El Artist</h2>
             
   <p> lorem ipsum, ipsum lorem whatugha </p>
             <p class="mb-0"></p>
