--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
                   <h2>El Artist</h2>
             
-  <p> lorem ipsum, ipsum lorem whatugha </p>
+  <p> I have been an artist all my life but I've been focusing on digital design work for the past 6 years. I have many credentials representing my skill but more important than that I have a passsion for the projects I work on. </p>
             <p class="mb-0"></p>
           </div>
 
