--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
         </div>
 
-    <p> </P>
+    <p> I have been an artist all my life but I've been focusing on digital design work for the past 6 years. I have many credentials representing my skill but more important than that I have a passsion for the projects I work on.</P>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item illustration col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="image3.html" class="item-wrap fancybox">
