--- a/index.html
+++ b/index.html
@@ -140,8 +140,17 @@
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
                   <h2>El Artist</h2>
             
-  <p> I have been an artist all my life but I've been focusing on digital design work for the past 6 years. I have many credentials representing my skill but more important than that I have a passsion for the projects I work on. </p>
-            <p class="mb-0"></p>
+<!-- Place <div> tag where you want the feed to appear -->
+<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+<!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+<script type="text/javascript">
+/* curator-feed-default-feed-layout */
+(function(){
+var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+i.src = "https://cdn.curator.io/published/851066e1-93ae-4f0a-9e9f-164c17d6f7c6.js";
+e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+})();
+</script>            <p class="mb-0"></p>
           </div>
 
 
