--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <title>Felix Zavala</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
