--- a/about.html
+++ b/about.html
@@ -79,8 +79,8 @@
   <div class="w3-container w3-center" data-aos="fade-up">
 
             <p><img src="img/vintagepic.png" alt="Image" class="img-fluid"></p>
-            <p>For the past 6 years digital art has been my main focus. To enhance my skills I went back to school and earned my Associates degree and several certifications. Now, I am currently enrolled in the University of Texas at Arlington and my goal is to complete my bachelors degree in Studio Art with a focus in Animation.</p>
-            <p></p>
+            <p>To enhance my skills I went back to school and earned my associates degree in Graphic Communications, as well as several certifications. <br> Now, I am currently enrolled in the University of Texas at Arlington and my goal is to complete my bachelors degree in Studio Art with a focus in Animation.</p>
+         
             <p> I have experience as a Freelance designer but I would like to work alongside and learn from other experienced artists who currently work</p>
             <p><a href="#" class="readmore">Download my CV</a></p>
           </div>
