--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@ body {
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/Portfolio pic.jpg" alt="Image" class="img-fluid">
+              <img src="img/Portfolio pic.jpg" alt="Image" class="img-fluid" width=50% >
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
         
