--- a/about.html
+++ b/about.html
@@ -108,15 +108,15 @@ body {
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/Portfolio pic.jpg" alt="Image" class="img-fluid" width=80% >
+              <img src="img/Portfolio pic.jpg" alt="Image" class="img-fluid" width=90% >
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
         
-<h4 class="h4 mb-3">What is it</h4>
+<h4 class="h4 mb-3">Who am I?</h4>
                 <div class="mb-5">
-                  <p> This is a piece I created for my portfolio class. We were asked to create a piece that incorporated our skills in typography, illustration, and photoshop. 
+                  <p> I was born in Brownsville, Texas but now I live in the Dallas-Fort Worth Metroplex. I love to travel and explore this beautiful world. Some of my hobbies include training Brazilian Jiu-jitsu and creating digital art.
                 </p>
-<h4 class="h4 mb-3">What I did</h4>
+<h4 class="h4 mb-3">Some of my credentials:</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>All of the text and typography in the image was created in Adobe InDesign</li>
                   <li>The image of Tyson was manipulated in Adobe Photoshop. </li>
