--- a/about.html
+++ b/about.html
@@ -123,8 +123,8 @@ body {
                   <li>Photo Retouching Certificate</li>
                 </ul>
                   
-                  <h4 class="h4 mb-3">Insight into my vision</h4>
-                  <p> I wanted to create something that captured the bold personality of Tyson Fury and at the same time hinted to his darker side.
+                  <h4 class="h4 mb-3">Insight into my vision for my goals</h4>
+                  <p> I want to continue growing my skills in animation and illustrations. I enjoy working in a fast paced environment that allows my skills to grow and where I can learn some new skills. </p>
                 </div>
 
             
