--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@ body {
             <ul class="list-unstyled">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>Dallas, Texas, USA</span>
+                <span>Dallas, Texas USA</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
