--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@ body {
                 </ul>
                   
                   <h4 class="h4 mb-3">Insight into my vision for my goals</h4>
-                  <p> I really enjoy working on want to continue growing my skills in animation and illustration. I also enjoy creating social media and web only content. a fast paced environment that allows my skills to grow and where I can learn some new skills. </p>
+                  <p> I would like to work in a role that will allow me to expand my skills in digital media creation. Especially those roles that involve web content and digital illustration. In the near future I would also like to do some more work with animation. </p>
                 </div>
 
             
