--- a/image3.html
+++ b/image3.html
@@ -4,17 +4,67 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {font-family: "Lato", sans-serif}
+.mySlides {display: none}
+</style>
+   
+
+
+
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+.header {
+  text-align: center;
+  padding: 32px;
+}
+
+
+
+
+</style>
+<body>
+
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card">
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"></a>
+    <a href="https://felixzavala.com/about.html" class="w3-bar-item w3-button w3-padding-large">ABOUT THE ARTIST</a>
+    <a href="https://felixzavala.com/contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+ 
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Page content -->
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
 
   <title>Felix Zavala</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-<font face="Courier">
+  <meta content="" name="A page to disply my digital art porfolio. ">
+  <meta content="" name="graphic, design, felix, zavala, art, portfolio, ">
 
   <!-- Favicons -->
   <link href="img/Felix Favicon.png" rel="icon">
-  <link href="img/Felix Favicon.png" rel="apple-touch-icon">
 
 
+  <!-- Font -->
+<font face="Courier">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -25,40 +75,18 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyPortfolio - v4.3.0
-  * Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
 
   <!-- ======= Navbar ======= -->
-  <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
-    <div class="container py-2 py-md-5">
-      <div class="row align-items-start">
-        <div class="col-md-2">
-          <ul class="custom-menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      
-          </div>
-        </div>
-     
-      </div>
 
-    </div>
-  </div>
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%"></a> 
-
+ 
         <span></span>
       </a>
     </div>
