--- a/beardoil.html
+++ b/beardoil.html
@@ -152,6 +152,8 @@ body {
 
  <!-- ======= Footer ======= -->
 
+ <!-- ======= Footer ======= -->
+
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
                             <a href="https://www.facebook.com/GraphicFelix"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
