--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@ body {
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"></a>
+    <a href="https://felixzavala.com/index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="https://felixzavala.com/about.html" class="w3-bar-item w3-button w3-padding-large">ABOUT THE ARTIST</a>
     <a href="https://felixzavala.com/contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
  
@@ -145,7 +146,7 @@ body {
 
 </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
