--- a/about.html
+++ b/about.html
@@ -47,12 +47,11 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
- <a href="https://www.facebook.com/GraphicFelix/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <a href="https://www.instagram.com/graphic_felix/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+ <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><i class="fa fa-youtube w3-hover-opacity"></i></a>                                                                                             
+  <a href="https://twitter.com/GraphicFelix"><i class="fa fa-twitter w3-hover-opacity"></i></a> 
+ <a href="https://www.facebook.com/GraphicFelix/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>                                                                                  
+  <a href="https://www.linkedin.com/in/jose-felix-zavala-471b76a9/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
 </footer>
 
 
