--- a/beardoil.html
+++ b/beardoil.html
@@ -25,7 +25,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 
 
-   <center><img src="img/tobaccovanillaoil.jpg" alt="Beard Oil bottle mockup"></center>
+   <center><img src="img/tobaccovanillaoil.jpg" style="width:"80%"alt="Beard Oil bottle mockup"></center>
 
   <!-- The Band Section -->
 
