--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <div class="w3-half">
       <img src="/img/floresmockupthumb.jpg" style="width:100%">
       <img src="/img/IMG_0972.PNG" style="width:100%">
-      <img src="/img/dreamfightposter.jpg" style="width:100%">
+      <img src="/img/dreamfightposter1.jpg" style="width:100%">
     </div>
   </div>
 
